2001-05-06  Bruno Haible  <haible@clisp.cons.org>

	* makemake.in: Move USE_GETTEXT treatment after USE_LIBICONV treatment,
	so that $LIBS contains libintl.a before libiconv.a.

2001-05-06  Sam Steingold  <sds@gnu.org>

	* eval.d (check_for_illegal_keywords): look ony at the first
	:allow-other-keys keyword

2001-05-05  Sam Steingold  <sds@gnu.org>

	handle devices in hostname translation correctly
	* pathname.d (device_diff): push_solution_with(S(Kdevice))
	(translate_device): pop (S(Kdevice))

2001-05-05  Sam Steingold  <sds@gnu.org>

	* type.lisp (subtypep): COMPILED-FUNCTION is a subtype of FUNCTION

2001-05-05  Sam Steingold  <sds@gnu.org>

	* clos.lisp (function-keywords): return 2 values: list of keywords
	and allow-other-keys-flag, as per ANSI CL

2001-05-05  Sam Steingold  <sds@gnu.org>

	Made the compiler a little less vociferous
	* clos.lisp (check-signature-congruence): extracted from
	STD-ADD-METHOD
	(std-add-method): use CHECK-SIGNATURE-CONGRUENCE

	* compiler.lisp (c-DEFUN): do not check signature for generic
	functions since this is better done at load time

2001-05-04  Sam Steingold  <sds@gnu.org>

	ANSI CL compliance: CHAR does not check for FILL-POINTER, ELT does.
	* sequence.d (seq_check_index): new function
	(elt, setelt): use it
	* charstrg.d (unpack_string): new function
	(unpack_string_rw, unpack_string_ro): use it
	(char, store_char): call unpack_string() directly
	instead of unpack_string_r[ow]

2001-05-04  Sam Steingold  <sds@gnu.org>

	Added compile-time signature checking in function calls
	* compiler.lisp (c-source-location): 2 optional arguments
	(c-source-point, c-source-point-location, current-function,
	get-signature, sig-to-list, inline-lambdabody,
	inline-callable-lambdabody-p, lambda-list-to-signature,
	match-known-unknown-functions, in-defun-p): new functions
	(c-warn): use C-COMMENT and CURRENT-FUNCTION
	(c-error): use CURRENT-FUNCTION
	(signature): new defstruct
	(function-signature, signature-to-list): moved here from